--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,5 @@ midterm-practice/01/longanswer.txt
 midterm-practice/01/shortanswer.txt
 psets/SimpleGraphics.py
 .vscode/launch.json
+*tmp.py
+*.pyc
